# NeuroCore-AI

./: .gitignore  CMakeLists.txt  README.md
include/: Matrix.h  Network.h
scripts/: data_loader.py  visualize.py
src/: Matrix.cpp  Network.cpp  main.cpp
